kubernetes/other/springdemo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springdemo-ingress
  namespace: springdemo
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: springapp
          servicePort: 8080
